<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TR210Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="print_test">打印测试</string>
    <string name="qr_code_test">扫码测试</string>
	<string name="usb_camare_test">USB摄像头测试</string>
	<string name="nfc_test">NFC测试</string>
	<string name="ic_card_test">IC卡测试</string>
	<string name="idcard_recognition">身份证识别</string>
	<string name="a_key_entrance">有密钥入口</string>
	<string name="no_key_entry">无密钥入口</string>

	<string name="print_text">打印文字</string>
	<string name="print_image">打印图片</string>
	<string name="print_bill">打印账单</string>
    
    <string name="scanner_activity">CortexScan</string>
	<string name="flash_on">Torch [ON]</string>
	<string name="flash_off">Torch [OFF]</string>
	<string name="formats">Formats</string>
	<string name="ok_button">OK</string>
	<string name="cancel_button">Cancel</string>
	<string name="title_my_preference">Settings</string>
	<string name="large_data_display">Large Data Display</string>
	<string name="low_contrast_mode">Low Contrast Mode</string>
	<string name="settings">Settings</string>
	<string name="info">Info</string>
	<string name="about">About</string>
	<string name="vibrate_on_scan">Vibrate On Scan</string>
	<string name="continuous_scan_mode">Continuous Scan</string>
	<string name="focus">Focus</string>
	<string name="resolution">Resolution</string>
	<string name="illumination">Illumination</string>
	<string name="symbologies">Symbologies</string>
	<string name="information">Information</string>
	<string name="enable_all">Enable All</string>
	<string name="disable_all">Disable All</string>
	<string name="aztec">Aztec</string>
	<string name="bc412">BC412</string>
	<string name="code11">Code 11</string>
	<string name="code128">Code 128</string>
	<string name="code32">Code 32</string>
	<string name="code39">Code 39</string>
	<string name="code49">Code 49</string>
	<string name="code93">Code 93</string>
	<string name="codabar">Codabar</string>
	<string name="codablockf">CodablockF</string>
	<string name="data_matrix">Data Matrix</string>
	<string name="ean13">EAN-13</string>
	<string name="ean8">EAN-8</string>
	<string name="grid_matrix">Grid Matrix</string>
	<string name="gs1_databar">GS1 Databar</string>
	<string name="hong_kong_2_of_5">Hong Kong 2 of 5</string>
	<string name="iata_2_of_5">IATA 2 of 5</string>
	<string name="interleaved_2_of_5">Interleaved 2 of 5</string>
	<string name="matrix_2_of_5">Matrix 2 of 5</string>
	<string name="micropdf417">MicroPDF417</string>
	<string name="microqr">MicroQR</string>
	<string name="msi_plessey">MSI Plessey</string>
	<string name="nec_2_of_5">NEC 2 of 5</string>
	<string name="pdf417">PDF417</string>
	<string name="pharmacode">Pharmacode</string>
	<string name="plessey">Plessey</string>
	<string name="qr_code">QR Code</string>
	<string name="straight_2_of_5">Straight 2 of 5</string>
	<string name="telepen">Telepen</string>
	<string name="trioptic">Trioptic</string>
	<string name="upc_a">UPC-A</string>
	<string name="upc_e">UPC-E</string>
	<string name="barcode_colon">Barcode:</string>
	<string name="length_colon">Length:</string>
	<string name="symbology_colon">Symbology:</string>
	<string name="tap_to_scan_again">Tap to scan again.</string>
	<string name="device_not_licensed">Device not licensed</string>
	<string name="debug_mode">Save images for debugging</string>
	<string name="data_display">Data Display</string>
	<string name="done">Done</string>
	<string name="debug_level">Debug Log</string>
	<string name="focus_normal">Normal</string>
	<string name="focus_normal_fixed">Normal Fixed</string>
	<string name="focus_far">Far</string>
	<string name="focus_far_fixed">Far Fixed</string>
	<string name="unsupported">Unsupported</string>
	<string name="focus_mode_not_supported">Focus mode not supported</string>
	<string name="camera_type">Camera Type</string>
	<string name="camera_type_front">Front-Facing</string>
	<string name="camera_type_back">Back-Facing</string>
	<string name="camera_type_not_supported">Camera type not supported</string>
	<string name="demo_version_str">Demo Version - Barcode data is truncated</string>
	<string name="hanxin_code">HanXinCode</string>
	<string name="maxi_code">Maxi Code</string>
	<string name="australia_post">Australia Post</string>
	<string name="canada_post">Canada Post</string>
	<string name="dutch_post">Dutch Post (KIX)</string>
	<string name="japan_post">Japan Post</string>
	<string name="korea_post">Korea Post</string>
	<string name="royal_mail">Royal Mail</string>
	<string name="usps_intelligent_mail">USPS Intelligent Mail</string>
	<string name="usps_planet">USPS Planet</string>
	<string name="usps_postnet">USPS Postnet</string>
	<string name="upu">UPU ID-tags</string>

</resources>
