<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/title_layout"
        layout="@layout/title_layout"/>
    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_below="@id/title_layout"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <Button
            android:id="@+id/print_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/print_text"
            android:background="@drawable/button_bg"
            android:textSize="18sp" />
        <Button
            android:id="@+id/print_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/print_image"
            android:background="@drawable/button_bg"
            android:textSize="18sp" />

        <Button
            android:id="@+id/print_bill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/print_bill"
            android:background="@drawable/button_bg"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>
</RelativeLayout>
